# Hachi64

./: README.md  TODO.md  composer.json
.github/: instructions.md
.github/workflows/: charp-test.yml  cpp-test.yml  csharp-ci.yml  csharp-test.yml  dart-ci.yml  dart-test.yml  go-publish.yml  go-test.yml  java-ci.yml  java-test.yml  js-npm-publish.yml  js-ts-publish.yml  js-ts-test.yml  kotlin-ci.yml  kotlin-test.yml  main.yml  php-publish.yml  php-test.yml  python-ci.yml  python-publish.yml  python-test.yml  ruby-ci.yml  ruby-test.yml  rust-publish.yml  rust-test.yml  swift-ci.yml  swift-test.yml
.github/workflows/java/: test.yml
.github/workflows/js-ts/: test.yml
.github/workflows/kotlin/: test.yml
.github/workflows/php/: test.yml
.github/workflows/python/: main.yml  publish.yml  test.yml
.github/workflows/ruby/: test.yml
.github/workflows/swift/: test.yml
cpp/: .gitignore  CMakeLists.txt  README.md  example.cpp  example_test  test_ab  test_ab.cpp
cpp/cmake/: hachi64Config.cmake.in
cpp/include/hachi64/: hachi64.hpp
cpp/tests/: test_hachi64.cpp
csharp/: .gitignore  Hachi64.sln  README.md
csharp/Hachi64/: Hachi64.cs  Hachi64.csproj
csharp/Hachi64.Tests/: Hachi64.Tests.csproj  Hachi64Tests.cs
dart/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
dart/example/: example.dart
dart/lib/: hachi64.dart
dart/test/: hachi64_test.dart
docs/: TODO.md  ci_workflow_pattern.md  implemtation_guide.md
go/: PUBLISHING.md  README.md  go.mod  hachi64.go  hachi64_test.go  version.go
java/: .gitignore  README.md  pom.xml
js/: IMPLEMENTATION_NOTES.md  NPM_SETUP.md  PUBLISH_ISSUE_SUMMARY.md  README.md  example-browser.html  example-node.js  package-lock.json  package.json  tsconfig.json
js/src/: index.ts
js/tests/: hachi64.test.ts
kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
php/: PACKAGIST_SETUP.md  README.md  composer.json  example.php  test_simple.php
php/src/: Hachi64.php
php/tests/: Hachi64Test.php
python/: .gitignore  README.md  setup.py
python/hachi64/: __init__.py
python/tests/: test_hachi64.py
ruby/: .gitignore  Gemfile  README.md  example.rb  hachi64.gemspec
ruby/lib/: hachi64.rb
ruby/spec/: hachi64_spec.rb  spec_helper.rb
rust/: Cargo.toml  PUBLISHING.md  README.md
rust/src/: lib.rs
swift/: .gitignore  Package.swift  README.md
swift/Sources/Hachi64/: Hachi64.swift
swift/Tests/Hachi64Tests/: Hachi64Tests.swift
(+4 files in other folders)
