[package]
name = "hachi64"
version = "0.1.5"
edition = "2021"
description = "哈吉米64 编解码器 - 使用64个中文字符进行 Base64 风格的编码和解码"
license = "MIT"
repository = "https://github.com/fengb3/Hachi64"
documentation = "https://docs.rs/hachi64"
homepage = "https://github.com/fengb3/Hachi64"
keywords = ["base64", "encoding", "chinese", "codec", "hachi"]
categories = ["encoding", "no-std"]
readme = "README.md"

[dependencies]
